--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -9,7 +9,7 @@ asc;ascending;stigende
 bag;Bag;Indkøbskurv
 cancel;Cancel;Annuller
 cannotDeleteAdmin;This action is not allowed for admin;Admin bruger kan ikke slettes
-categorieAlreadyExist;Category already exist;Kategori findes allerede
+categoryAlreadyExist;Category already exist;Kategori findes allerede
 categorieNotFound;Category not found;Kategori findes ikke
 categories;Categories;Kategorier
 categories;Categories;Kategorier
