--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -34,6 +34,7 @@ customersList;Customers list;Kundeliste
 dashboard;Dashboard;Dashboard
 delete;Delete;Slet
 deleted;deleted;slettet
+deleteCategory;Delete category;Slet kategori
 deleteUser;Delete user;Slet bruger
 desc;descending;faldende
 editUser;Edit user;Opdater bruger
