--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -82,8 +82,8 @@ myBag;My bag;Min indkøbskurv
 myOrders;My orders;Mine ordrer
 newCategoryCreated;New category created;Ny kategori blev oprettet
 noData;No data found;Ingen data fundet
-noEmail;Please provide an email;Indtast venligst en e-mail
-noPassword;Please provide a password;Indtast venligst en adgangskode
+noEmail;Please enter an email;Indtast venligst en e-mail
+noPassword;Please enter a password;Indtast venligst en adgangskode
 notAuthorizedAdmin;Not authorized as an admin;Ikke autoriseret som admin 
 notAuthorizedNoToken;Not authorized, no token;Ikke autoriseret, ingen token
 notAuthorizedTokenFailed;Not authorized, token failed;Ikke autoriseret, token mislykkedes
@@ -99,6 +99,7 @@ passwordUppercase;Password should contain at least one uppercase letter;Adgangsk
 pensil;Pensil;Blyant
 pleaseEnter;Please enter;Indsæt venligst
 pleaseEnterName;Please enter name;Indsæt venligst navn
+pleaseEnterCategoryName;Please enter a category name;Indsæt venligst kategori
 pleaseEnterPassword;Please enter password;Indsæt venligst adgangskode
 pleaseEnterValidEmail;Please enter a valid email;Indsæt venligst en gyldig e-mail
 preferences;Preferences;Præferencer
