align userPage and CategoryPage

--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -16,8 +16,8 @@ categories;Categories;Kategorier
 categoryDeleted;Category deleted;Kategori blev slettet
 categoryName;Category name;Kategori navn
 clearFilters;Clear filters;Ryd filtre
-createdAt;Created at;Tilføjet at
-updatedAt;Updated at;Opdateret at
+createdAt;Created at;Tilføjet
+updatedAt;Updated at;Opdateret
 clearSort;Clear sort;Ryd sortering
 close;Close;Luk
 closeDialog;Close dialog;Luk dialog
