--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -44,7 +44,7 @@ errorAltText;A really guilty emoji;En meget skyldig emoji
 expandMenu;Expand menu;Udvid menu
 eye;Eye;Øje
 eyeClosed;Closed eye;Lukket øje
-fillAll;Please fill all the inputs;Udfyld venligst alle felter
+fillAll;Please fill all inputs;Udfyld venligst alle felter
 filter;Filter;Filtrer
 filterRow;Filter row;Filtrer række
 filtersApplied;Filters applied;Filtre anvendt
