--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -140,6 +140,7 @@ signupFailed;Sign up failed;Registrering mislykkedes
 signupSucceeded;Sign up succeeded;Registrering lykkedes
 sort;Sort;Sorter
 sub;Sub;Sekundær
+subCategories;Subcategories;Underkategorier
 success;Success;Succes
 sureToDelete;Are you sure that you want to delete;Er du sikker på at du vil slette
 title;Title;Titel
