subcategory in product table

--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -142,6 +142,7 @@ signupSucceeded;Sign up succeeded;Registrering lykkedes
 sort;Sort;Sorter
 sub;Sub;Sekundær
 subCategories;Subcategories;Underkategorier
+subCategory;Subcategory;Underkategori
 success;Success;Succes
 sureToDelete;Are you sure that you want to delete;Er du sikker på at du vil slette
 title;Title;Titel
