--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -30,6 +30,7 @@ collapseMenu;Collapse menu;Skjul menu
 collection;Collection;Kollektion
 confirmPassword;Confirm password;Gentag adgangskode
 contact;Contact;Kontakt
+create;Create;Tilføj
 createAccount;Create account;Opret konto
 createdAt;Created at;Tilføjet
 createNewCategory;Create new category;Opret ny kategori
