--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -41,6 +41,7 @@ dashboard;Dashboard;Dashboard
 date;Date;Dato
 delete;Delete;Slet
 deleted;deleted;slettet
+deleteCategory;Delete category;Slet kategori
 deleteUser;Delete user;Slet bruger
 desc;descending;faldende
 description;Description;Beskrivelse
