--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -42,6 +42,7 @@ date;Date;Dato
 delete;Delete;Slet
 deleted;deleted;slettet
 deleteCategory;Delete category;Slet kategori
+deleteOrReassignCategory;Delete or reassign associated  products before deleting this category;Slet eller tildel produkter på ny, før du sletter denne kategori
 deleteUser;Delete user;Slet bruger
 desc;descending;faldende
 description;Description;Beskrivelse
