--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -137,6 +137,7 @@ scheduledDate;Scheduled date;Planlagt dato
 scheduledDateMustBeFuture;Scheduled date must be after today;Planlagt dato skal være efter i dag
 search;Search;Søg
 selectCategoryStatus;Select category status;Vælg kategori status
+selectParentCategory;Select parent category status;Vælg main kategori
 selectCurrency;Select currency;Vælg valuta
 selectLanguage;Select language;Vælg sprog
 selectPreferences;Select preferred language and currency;Vælg sprog og valuta
