--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -135,7 +135,7 @@ role;Role;Rolle
 save;Save;Gem
 scheduled;Scheduled;Planlagt
 scheduledDate;Scheduled date;Planlagt dato
-scheduledDateMustBeFuture;Scheduled date must be after today;Planlagt dato skal være efter i dag
+scheduledDateMustBeFuture;Scheduled date must be after now;Planlagt dato skal være efter nu
 search;Search;Søg
 selectCategoryStatus;Select category status;Vælg kategori status
 selectCurrency;Select currency;Vælg valuta
