--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -107,7 +107,7 @@ notAuthorizedNoToken;Not authorized, no token;Ikke autoriseret, ingen token
 notAuthorizedTokenFailed;Not authorized, token failed;Ikke autoriseret, token mislykkedes
 noUser;User not found. Please sign up first;Bruger blev ikke fundet. Opret dig først
 orders;Orders;Ordrer
-categoryIsCurrently;This category is currently;Denne kategori er i øjeblikket
+categoryIsCurrently;The parent category is currently;HovedKategorien er i øjeblikket
 categoryWillNotBeVisible;and will not be visible in the shop until it's Published;og vil ikke være synlig i shoppen, før den er udgivet
 password;Password;Adgangskode
 parentCategory;Parent category;Hovedkategori
