--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -31,8 +31,8 @@ confirmPassword;Confirm password;Gentag adgangskode
 contact;Contact;Kontakt
 create;Create;Tilføj
 createAccount;Create account;Opret konto
-createdAt;Created at;Tilføjet den
 created;Created;Tilføjet
+createdAt;Created at;Tilføjet den
 createNewCategory;Create new category;Opret ny kategori
 createNewSubCategory;Create new subcategory;Opret ny underkategori
 criterionMet;Criterion met;Kriterium opfyldt
@@ -48,6 +48,7 @@ deleteOrReassignCategory;Delete or reassign associated  products before deleting
 deleteUser;Delete user;Slet bruger
 desc;descending;faldende
 description;Description;Beskrivelse
+edit;Edit;Opdater
 editCategory;Edit category;Opdater kategori
 editProduct;Edit product;Opdater produkt
 editSubCategory;Edit subcategory;Opdater underkategori
@@ -106,12 +107,12 @@ noProduct;Product not found;Produkt blev ikke fundet
 notAuthorizedAdmin;Not authorized as an admin;Ikke autoriseret som admin 
 notAuthorizedNoToken;Not authorized, no token;Ikke autoriseret, ingen token
 notAuthorizedTokenFailed;Not authorized, token failed;Ikke autoriseret, token mislykkedes
+notVisibleInShop;is not visible in the shop until the main category is published;bliver først synlig i shoppen, når hovedkategorien er udgivet
 noUser;User not found. Please sign up first;Bruger blev ikke fundet. Opret dig først
 orders;Orders;Ordrer
-categoryIsCurrently;The parent category is currently;HovedKategorien er i øjeblikket
-categoryWillNotBeVisible;and will not be visible in the shop until it's Published;og vil ikke være synlig i shoppen, før den er udgivet
-password;Password;Adgangskode
 parentCategory;Parent category;Hovedkategori
+parentCategoryIs;Parent category is;Hovedkategori er
+password;Password;Adgangskode
 passwordDoNotMatch;The passwords do not match;Adgangskoderne stemmer ikke overens
 passwordLowercase;Password should contain at least one lowercase letter;Adgangskoden skal indeholde mindst ét lille bogstav
 passwordMinLength;Password should be at least 8 characters;Adgangskoden skal være mindst 8 tegn
