--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -133,6 +133,7 @@ productList;Product list;Produktliste
 productName;Product name;Produkt navn
 products;Products;Produkter
 profile;Profile;Profil
+publish;Publish;Udgiv
 published;Published;Udgivet
 resetFiltersAndSorting;Reset filters and sorting;Nulstil filtre og sortering
 retry;Retry;Forsøg igen
