--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -183,5 +183,6 @@ userInfo;User info;Bruger info
 username;User name;Brugernavn
 users;Users;Brugere
 userUpdated;User updated;Bruger opdateret
+viewCategory;View category;Se kategori
 warning;Warning;Warning
 welcome;Welcome;Velkommen
