--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -136,6 +136,7 @@ products;Products;Produkter
 profile;Profile;Profil
 publish;Publish;Udgiv
 published;Published;Udgivet
+qty;Qty;Antal
 resetFiltersAndSorting;Reset filters and sorting;Nulstil filtre og sortering
 retry;Retry;Forsøg igen
 role;Role;Rolle
