update and create product pages

--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -35,6 +35,7 @@ createAccount;Create account;Opret konto
 created;Created;Tilføjet
 createdAt;Created at;Tilføjet den
 createNewCategory;Create new category;Opret ny kategori
+createNewProduct;Create new product;Opret nyt produkt
 criterionMet;Criterion met;Kriterium opfyldt
 criterionNotMet;Criterion not met;Kriterium ikke opfyldt
 currency;Currency;Valuta
