--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -2,7 +2,6 @@
 about;About;Profil
 account;Account;Konto
 actionNotAllowedForAdmin;Admin cannot be deleted;Denne handling er ikke tilladt for administrator
-addCategoryName;Add category name;Tilføj navn på kategori
 additionalInfo;Additional info;Supplerende information
 admin;Admin;Admin
 allowedFormats;Allowed formats;Tilladte formater
@@ -152,13 +151,11 @@ scheduledDate;Scheduled date;Planlagt dato
 scheduledDateMustBeFuture;Scheduled date must be after now;Planlagt dato skal være efter nu
 scheduledToBePubliched;is scheduled to be published at;er planlagt til udgivelse den 
 search;Search;Søg
-selectCategoryStatus;Select category status;Vælg kategori status
 selectCurrency;Select currency;Vælg valuta
 selectLanguage;Select language;Vælg sprog
-selectParentCategory;Select parent category status;Vælg hovedkategori
 selectPreferences;Select preferred language and currency;Vælg sprog og valuta
-selectPublishDate;Select publish date;Vælg udgivelsesdato
-selectPublishTime;Select publish time;Vælg udgivelsestid
+publishDate;Publish date;Udgivelsesdato
+publishTime;Publish time;Udgivelsestidspunkt
 shopNow;Shop now;Køb nu
 showPassword;Show password;Vis adgangskode
 signup;Sign up;Opret bruger
