multiselect for product form

--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -7,6 +7,7 @@ admin;Admin;Admin
 allowedFormats;Allowed formats;Tilladte formater
 asc;ascending;stigende
 bag;Bag;Indkøbskurv
+black;Black;Sort
 brand;Brand;Mærke
 calendar;Calendar;Kalender
 cancel;Cancel;Annuller
