--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -196,3 +196,10 @@ viewCategory;View category;Se kategori
 viewProduct;View product;Se produkt
 warning;Warning;Warning
 welcome;Welcome;Velkommen
+productInformation;Product information;Produkt oplysninger
+productImages;Product images;Produkt billeder
+productQuantity;Product quantity;Produkt antal
+productVariants;Product Variants;Produkt varianter
+pricing;Pricing;Prissætning
+details;Details;Detaljer
+addToStock;Add to stock;Tilføj til lager
