--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -22,6 +22,7 @@ categoryList;Category list;Kategori-liste
 categoryName;Category name;Kategori navn
 categoryNotFound;Category not found;Kategori findes ikke
 categoryStatus;Category status;Kategori status
+productStatus;Product status;Produkt status
 categoryUpdated;Category updated;Kategori opdateret
 circelChevronRight;Circel chevronRight;Circel chevronRight
 clearFilters;Clear filters;Ryd filtre
